--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Landing Page</title>
 
     <!-- <link rel="stylesheet" href="/css/common.css"> -->
-    <link rel="stylesheet" href="../sbsc-exam-portal/css/home.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 
 <body>
@@ -42,7 +42,7 @@
         <div class="service txt-alg" id="service" >
             <div>
                 <div class="ser-img">
-                    <img src="../sbsc-exam-portal/images/global.png" alt="ia" class="serimg txt-alg">
+                    <img src="./sbsc-exam-portal/images/global.png" alt="ia" class="serimg txt-alg">
                 </div>              
                 <div class="txt">
                     <h3>News Feed</h3>
