--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="service txt-alg" id="service" >
             <div>
                 <div class="ser-img">
-                    <img src="./sbsc-exam-portal/images/global.png" alt="ia" class="serimg txt-alg">
+                    <img src="images/global.png" alt="ia" class="serimg txt-alg">
                 </div>              
                 <div class="txt">
                     <h3>News Feed</h3>
