--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div>
                 <div class="ser-img">
-                    <img src="../sbsc-exam-portal/images/build.png" alt="ia" class="serimg">
+                    <img src="images/build.png" alt="ia" class="serimg">
                 </div>                
                 <div class="txt">
                     <h3>Events</h3>
@@ -72,7 +72,7 @@
         <div class="service txt-alg" id="service" >
             <div>
                 <div class="ser-img">
-                    <img src="../sbsc-exam-portal/images/global.png" alt="ia" class="serimg">
+                    <img src="images/global.png" alt="ia" class="serimg">
                 </div>              
                 <div class="txt">
                     <h3>Maximize Reach</h3>
@@ -81,7 +81,7 @@
             </div>
             <div>
                 <div class="ser-img">
-                    <img src="../sbsc-exam-portal/images/build.png" alt="ia" class="serimg">
+                    <img src="images/build.png" alt="ia" class="serimg">
                 </div>                
                 <div class="txt">
                     <h3>Biuld Engagement</h3>
@@ -90,7 +90,7 @@
             </div>
             <div>
                 <div class="ser-img">
-                    <img src="../sbsc-exam-portal/images/develop.png" alt="ia" class="serimg">
+                    <img src="images/develop.png" alt="ia" class="serimg">
                 </div>
                 
                 <div class="txt">
@@ -108,7 +108,7 @@
                     <p>Accessibility to view Results and Print.</p>
                 </div>
                 <div class="abtimg">
-                    <img src="../sbsc-exam-portal/images/homeimg.jpg" alt="">
+                    <img src="images/homeimg.jpg" alt="">
                 </div>
                 <div>
                     <p>Work in partnership and bring people together to create solutions to complex problems and also
@@ -127,18 +127,18 @@
             <div class="location" id="location">
                 <h1 class=" hd-hg logo b600 txt-color">GET IN TOUCH </h1>
                 <div class="tele">
-                    <p><img src="../sbsc-exam-portal/images/call.png" alt=""/> <strong class="txt-color">:</strong> +234 806 560 7842, +234 906 890 0830</p>
+                    <p><img src="images/call.png" alt=""/> <strong class="txt-color">:</strong> +234 806 560 7842, +234 906 890 0830</p>
                 </div>
                 <div class="email">
-                    <p><img src="../sbsc-exam-portal/images/temail.png" alt="" /><strong class="txt-color"> :</strong> monnyann10@gmail.com, monnyann10@gmail.com</p>
+                    <p><img src="images/temail.png" alt="" /><strong class="txt-color"> :</strong> monnyann10@gmail.com, monnyann10@gmail.com</p>
                 </div>
                 <div class="address">
-                    <p><img src="../sbsc-exam-portal/images/address.png" alt="" /><strong class="txt-color"> :</strong> Nigeria</p>
+                    <p><img src="images/address.png" alt="" /><strong class="txt-color"> :</strong> Nigeria</p>
                 </div>
                 <div class="foot-social">
-                    <img src="../sbsc-exam-portal/images/google.svg" alt="" wi>
-                    <img src="../sbsc-exam-portal/images/fb.svg" alt="">
-                    <img src="../sbsc-exam-portal/images/ins.svg" alt="">
+                    <img src="images/google.svg" alt="" wi>
+                    <img src="images/fb.svg" alt="">
+                    <img src="images/ins.svg" alt="">
                 </div>
             </div>
             <!-- FORM -->
