--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     access.
                 </p>
                 <div class="btn pointer b900 wh">
-                    <a href="pages/adminLogin.html" class="bg-txt-color wh">Admin</a>
+                    <a href="./pages/adminLogin.html" class="bg-txt-color wh">Admin</a>
                     <!-- <a href="/sbsc-exam-portal/pages/studentLogin.html" class="bg-txt-color wh">Students</a> -->
                 </div>
 
