--- a/pages/adminLogin.html
+++ b/pages/adminLogin.html
@@ -76,7 +76,7 @@
     </div>
 
     <script src="../js/app.js"></script>
-    <script src="/sbsc-exam-portal/js/register.js"></script>
+    <script src="../js/register.js"></script>
   </body>
 
 </html>
